vote.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: votingapp
spec:
  selector:
    matchLabels:
      name: votingapp
  replicas: 2
  template:
    metadata:
      labels:
        name: votingapp
    spec:
      containers:
        - name: votingapp
          image: whujin11e/public:azure_voting_app
          ports:
            - containerPort: 80
