service.yml
apiVersion: v1
kind: Service
metadata:
  name: votingapp
spec:
  type: LoadBalancer
  ports:
    - port: 80
  selector:
    name: votingapp
